<resources>
    <string name="app_name">Project</string>
    <string name="the_little_labyrinth">The Little Labyrinth</string>
    <string name="medium">MEDIUM</string>
    <string name="easy">EASY</string>
    <string name="hard">HARD</string>
    <string name="select_a_level">Select a level</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="congratulations">Congratulations!</string>
    <string name="back_to_home">Back to Home</string>
    <string name="your_score">Your Score:</string>
    <string name="Help_Text">Welcome to The Little Labyrinth! In this game, you control a red sqaure and your objective is to reach the green goal. You control the red square by tilting your device. Try to get through each level as quickly as possible without running into any obstacles. Running into obstacles makes your score jump and score gradually increases as time goes on. See how low of a score you can get on each level! I hope you enjoy the game.</string>
    <string name="about_us">About Us</string>
</resources>
